@startuml ClassDiagram

hide circle
skinparam classAttributeIconSize 0

class QObject

QObject <|-- QWidget
class QWidget

QWidget <|-- QCustomPlot
class QCustomPlot

QWidget <|--QFrame
class QFrame

QFrame <|-- QLabel
class QLabel

QWidget <|-- QAbstractButton
class QAbstractButton

QAbstractButton <|-- QPushButton
class QPushButton

QWidget <|-- QMainWindow
class QMainWindow

QCustomPlot "1" <-- "0..1" Graphs : has <
class Graphs {
  - placeholderGraph: QCustomPlot*
  + setupGraph(): void
  + setDataPEAECG(): void
  + setDataAsystoleECG(): void
  + setDataVTECG(): void
  + setDataVFECG(): void
  + resetGraphData(): void
  - updateGraphData(yValues: QVector<double>&): void
}

MainWindow "1" -- "1" StatusIndicator : has >
QLabel <|-- StatusIndicator
class StatusIndicator {
  - offPixmap: QPixmap
  - onPixmap: QPixmap
  - passedPixmap: QPixmap
  - updateIndicator(): void
}

MainWindow "1" -- "0..*" AEDImage : has >
QLabel <|-- AEDImage
class AEDImage {
  - timer: QTimer*
  - illuminated: bool
  - stateName: QString
  - offPixmap: QPixmap
  - onPixmap: QPixmap
  - turnOn(): void
  - turnOff(): void
  - toggleIlluminated(): void
  - handleStateChanged(state: BaseState*): void
}

QPushButton <|-- ShockIndicatorButton
ShockIndicatorButton "1" <-- "1" MainWindow : has <
class ShockIndicatorButton {
  - offPixmap: QPixmap
  - onPixmap: QPixmap
  - timer: *QTimer
  - illuminated: bool
  + startFlashing(): void
  + stopFlashing(): void
  - toggleLight(): void
}

QWidget <|-- AttachElectrodePadsWidget
AttachElectrodePadsWidget "1" -- "1" MainWindow : has <
class AttachElectrodePadsWidget {
  - patientComboBox: QComboBox*
  - attachmentComboBox: QComboBox*
  - handlePatientComboBoxChanged(index: int): void
  - handleAttachmentComboBoxChanged(index: int): void
}

QWidget <|-- BatteriesWidget
BatteriesWidget "1" -- "1" MainWindow : has <
class BatteriesWidget {
  - spinBox: QSpinBox*
  - button: QPushButton*
  - updateBattery(): void
}

QLabel <|-- ChestCompressionDisplay
ChestCompressionDisplay "1" -- "1" MainWindow : has <
class ChestCompressionDisplay {
  - pixmaps: QVector<QPixmap>
  - patientTypeIndex: int
  - compressionTypeIndex: int
  + setPatientTypeIndex(patientTypeIndex: int): void
  + setCompressionTypeIndex(compressionTypeIndex: int): void
  - loadImages(): void
  - updateDisplay(): void
}

QWidget <|-- ElapsedTimeLabel
ElapsedTimeLabel "1" <-- MainWindow : has <
class ElapsedTimeLabel {
  - elapsedTimer: QElapsedTimer
  - elapsedTimeLabel: QLabel*
  - updateTimer: QTimer
  + startElapsedTime(): void
  + getElaspedTime(): qint64
  + resetElapsedTime(): void
  + updateElapsedTimeDisplay(): void
}

QWidget <|-- EndProgramWidget
EndProgramWidget "1" -- "1" MainWindow : has <
class EndProgramWidget {
  - handleEndProgramComboBoxChanged(index: int): void
}

QWidget <|-- InstallElectrodesWidget
InstallElectrodesWidget "1" -- "1" MainWindow : has <
class InstallElectrodesWidget {
  - label: QLabel*
  - button: QButton*
  - updateLabel(electrodesInstalled: bool): void
}

QWidget <|-- PatientStatusWidget
PatientStatusWidget "1" -- "1" MainWindow : has <
class PatientStatusWidget {
  - patientStatusComboBox: QComboBox*
  - handlePatientStatusComboBoxChanged(index: int): void
}

together {
  UI "1" --* "1" MainWindow
  class UI

  QMainWindow <|-- MainWindow
  class MainWindow {
    + ecgGraph: QCustomPlot*
    - state: BaseState*
    - lastState: QString
    - console: QPlainTextEdit*
    - unitStatus: enum
    - battery: int
    - electrodesInstalled: bool
    - electrodePadsAttachedState: enum
    - patientStatus: enum
    - shockIndicatorButtonPressed: bool
    - batteryLabel: QLabel*
    - shockCountLabel: QLabel*
    - numberOfShocks: int
    - displayWidget: QWidget*
    + changeState(newState: BaseState*): void
    + playMessage(message: QString): void
    + hasSufficientBattery(): bool
    + updateShockCount(): void
    + displayVTECG(): void
    + displayVFECG(): void
    + displayPEAECG(): void
    + displayAsystoleECG(): void
    + resetECGDisplay(): void
    + shockIndicatorButtonFlashing(): void
    + shockIndicatorButtonStopFlashing(): void
    + getShockIndicatorButtonPressed(): bool
    + startTimer(): void
    + stopTimer(): void
    + isCurrentStatePerformCPR(): bool
    + toggleElectrodesInstalled(): void
    + rechargeBatteries(): void
    - restoreState(): void
    - activateShockIndicatorButtonPressed(): void
  }
}

together {
  MainWindow "1" o-- "1" BaseState
  abstract class BaseState {
    - context: MainWindow*
    + initialize(): void
    + execute(): void
    + togglePower(): void
    + {abstract} getStateName(): QString
  }

  abstract class IntermediateState {
    - step: int
    + nextStep(): void
  }

  BaseState <|-- PoweredOffState
  class PoweredOffState {
    - timer: QTimer*
  }

  BaseState <|-- SelfTestState
  IntermediateState <|-- SelfTestState
  class SelfTestState {
    - timer: QTimer*
  }

  BaseState <|-- LowBatteryState
  class LowBatteryState

  BaseState <|-- ElectrodesNotInstalledState
  class ElectrodesNotInstalledState

  BaseState <|-- CheckResponsivenessState
  class CheckResponsivenessState {
    - timer: QTimer*
  }

  BaseState <|-- CallForHelpState
  class CallForHelpState {
    - timer: QTimer*
  }

  BaseState <|-- AttachDefibrillatorPadsState
  class AttachDefibrillatorPadsState {
    - timer: QTimer*
  }

  BaseState <|-- AnalyzingState
  IntermediateState <|-- AnalyzingState
  class AnalyzingState {
    - timer: QTimer*
  }

  BaseState <|-- PerformCPRState
  IntermediateState <|-- PerformCPRState
  class PerformCPRState {
    - timer: QTimer*
  }
}

@enduml
